--- a/NginxReverseProxy/proxy/index.html
+++ b/NginxReverseProxy/proxy/index.html
@@ -6,21 +6,15 @@
  <body>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
      <div style="text-align: center;"> 
-         <h3>Web Sitemize Hoşgeldiniz - Proxy Server Run</h3> 
+         <h3>Welcome to My Website - Proxy Server Run</h3> 
      </div>
 
      <div style="text-align:center ;">
-        <p>
-        
-        SESSİZ GEMİ</p><p>Artık demir almak günü gelmişse zamandan,<br>
-        Meçhule giden bir gemi kalkar bu limandan.</p><p>Hiç yolcusu yokmuş gibi sessizce alır yol; <br>
-        Sallanmaz o kalkışta ne mendil ne de bir kol.</p><p>Rıhtımda kalanlar bu seyahatten elemli,<br>
-        Günlerce siyah ufka bakar gözleri nemli.</p><p>Biçare gönüller. Ne giden son gemidir bu.<br>
-        Hicranlı hayatın ne de son matemidir bu.</p><p>Dünyada sevilmiş ve seven nafile bekler; <br>
-        Bilmez ki, giden sevgililer dönmeyecekler.</p><p>Bir çok gidenin her biri memnun ki yerinden.<br>
-        Bir çok seneler geçti; dönen yok seferinden</p><p>Yahya Kemal BEYATLI<br>
-        
-        </p>
+        <p> 
+         This site running with docker, and Nginx.
+         <br>
+         <a href="http://sub.ruchan.me/">sub.ruchan.me</a>
+      </p>
     </div>
  </body>
  </html>
