--- a/NginxReverseProxy/proxy/index.html
+++ b/NginxReverseProxy/proxy/index.html
@@ -13,7 +13,8 @@
         <p> 
          This site running with docker, and Nginx.
          <br>
-         <a href="http://sub.ruchan.me/">sub.ruchan.me</a>
+         Code files in 
+         <a href="https://github.com/ruchany13/MyWebsite/tree/main/NginxReverseProxy">Github</a>
       </p>
     </div>
  </body>
