--- a/NginxReverseProxy/proxy/index.html
+++ b/NginxReverseProxy/proxy/index.html
@@ -11,9 +11,9 @@
 
      <div style="text-align:center ;">
         <p> 
-         This site running with docker, and Nginx.
-         <br>
-         Code files in 
+        This site running with docker, and Nginx.
+        Nginx reverse proxy configuration is used.<br>
+        Code files in 
          <a href="https://github.com/ruchany13/MyWebsite/tree/main/NginxReverseProxy">Github</a>
       </p>
     </div>
