--- a/NginxReverseProxy/proxy/index.html
+++ b/NginxReverseProxy/proxy/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>
      <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-     <title>Default</title>
+     <title>Ruchan Yalçın</title>
  </head>
  <body>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
