--- a/NginxReverseProxy/service_a/index.html
+++ b/NginxReverseProxy/service_a/index.html
@@ -1,12 +1,14 @@
 <html>
  <head>
      <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-     <title>Default</title>
+     <title>Service A</title>
  </head>
  <body>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
      <div style="text-align: center;"> 
-         <h3>Welcome to My Website - Service_a is running now <a href="http://sub.ruchan.me/">sub.ruchan.me</a></h3>
+         <h3>Welcome to My Website</h3>
+         <p>Service_a is running </p>
+
          
 
          
