add info and url

--- a/NginxReverseProxy/proxy/index.html
+++ b/NginxReverseProxy/proxy/index.html
@@ -12,10 +12,32 @@
      <div style="text-align:center ;">
         <p> 
         This site running with docker, and Nginx.
-        Nginx reverse proxy configuration is used.<br>
+        Nginx reverse proxy configuration is used. There are two subdomians running. Service A = "sub.ruchan.me"
+         Service B = "ruchan.ruchan.me"<br>
         Code files in 
          <a href="https://github.com/ruchany13/MyWebsite/tree/main/NginxReverseProxy">Github</a>
       </p>
+    </div>
+    <div>
+        <p> - Nginx Reverse Proxy Application for subdomains <a href="https://github.com/ruchany13/MyWebsite/tree/main/NginxReverseProxy">Github</a> </p>
+        <p><a href="http://ruchan.me">Proxy Main Page</a> <br>
+            <a href="http://sub.ruchan.me">Service A</a> <br>
+            <a href="http://ruchan.ruchan.me">Service B</a> </p>
+
+
+        <p>- Gitlab CI Pipeline <a href="https://gitlab.com/ruchany13/my-app">Gitlab</a> </p>
+        <p>
+            <a href="http://ruchan.me:5001">Website Link</a> 
+        </p>
+
+        <p>- Gitlab CI Pipeline with Kaniko 
+            <a href="https://gitlab.com/ruchany13/first">Gitlab</a>
+        </p>
+        <p>
+            <a href="http:ruchan.me:5002">Website Link</a>
+        </p>
+
+        <p></p>
     </div>
  </body>
  </html>
