--- a/NginxReverseProxy/proxy/index.html
+++ b/NginxReverseProxy/proxy/index.html
@@ -34,7 +34,7 @@
             <a href="https://gitlab.com/ruchany13/first">Gitlab</a>
         </p>
         <p>
-            <a href="http:ruchan.me:5002">Website Link</a>
+            <a href="http://ruchan.me:5002">Website Link</a>
         </p>
 
         <p></p>
