--- a/NginxLB/app1/index.html
+++ b/NginxLB/app1/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="col-md-10 col-sm-12 col-xs-12">
             <main id="main-doc">
-                <section class="main-section" id="Introduction" >
+                <section class="main-section" id="Nginx Load Balancer" >
                  <!--basic styling for the headings, better practice to do the same in a css file as the styling is same for all headers-->
                     <h3 style = "background: black; color: white">Introduction</h3>
                     <article>
