--- a/NginxLB/app1/index.html
+++ b/NginxLB/app1/index.html
@@ -13,7 +13,7 @@
                 <ul class="nav nav-pills nav-stacked">
                  <!--internal linking to the respective sections-->
                     <a class="nav-link" href="#Introduction" rel="internal">
-                        <li>Introduction</li>
+                        <li>Nginx Load Balancer</li>
                     </a>
                     <a class="nav-link" href="#What_you_should_already_know" rel="internal">
                         <li>What you should already know</li>
@@ -34,7 +34,7 @@
             <main id="main-doc">
                 <section class="main-section" id="Nginx Load Balancer" >
                  <!--basic styling for the headings, better practice to do the same in a css file as the styling is same for all headers-->
-                    <h3 style = "background: black; color: white">Introduction</h3>
+                    <h3 style = "background: black; color: white">Nginx Load Balancer</h3>
                     <article>
                     <p>The word "Docker" refers to several things, including an open source community project; tools from the open source project; Docker Inc., 
                         the company that primarily supports that project; and the tools that company formally supports. The fact that the technologies and 
