add new load balancer

--- a/NginxReverseProxy/proxy/index.html
+++ b/NginxReverseProxy/proxy/index.html
@@ -24,6 +24,17 @@
             <a href="http://sub.ruchan.me">Service A</a> <br>
             <a href="http://ruchan.ruchan.me">Service B</a> </p>
 
+        <p> - Nginx Load Balancer <a href="https://github.com/ruchany13/MyWebsite/tree/main/NginxLB">Github</a></p>
+        <p>
+            <a href="http://ruchan.me:7003">Website</a>
+            <a href="http://ruchan.me:7001"> App 1 </a>
+            <a href="http://ruchan.me:7002"> App 2</a>
+
+
+
+        </p>
+
+
 
         <p>- Gitlab CI Pipeline <a href="https://gitlab.com/ruchany13/my-app">Gitlab</a> </p>
         <p>
