--- a/NginxReverseProxy/proxy/index.html
+++ b/NginxReverseProxy/proxy/index.html
@@ -26,8 +26,8 @@
 
         <p> - Nginx Load Balancer <a href="https://github.com/ruchany13/MyWebsite/tree/main/NginxLB">Github</a></p>
         <p>
-            <a href="http://ruchan.me:7003">Website</a>
-            <a href="http://ruchan.me:7001"> App 1 </a>
+            <a href="http://ruchan.me:7003">Website</a> <br>
+            <a href="http://ruchan.me:7001"> App 1 </a> <br>
             <a href="http://ruchan.me:7002"> App 2</a>
 
 
