--- a/NginxLB/app2/index.html
+++ b/NginxLB/app2/index.html
@@ -13,7 +13,7 @@
                 <ul class="nav nav-pills nav-stacked">
                  <!--internal linking to the respective sections-->
                     <a class="nav-link" href="#Introduction" rel="internal">
-                        <li>Introduction</li>
+                        <li>Nginx Load Balancer</li>
                     </a>
                     <a class="nav-link" href="#What_you_should_already_know" rel="internal">
                         <li>What you should already know</li>
@@ -32,7 +32,7 @@
         </div>
         <div class="col-md-10 col-sm-12 col-xs-12">
             <main id="main-doc">
-                <section class="main-section" id="Introduction" >
+                <section class="main-section" id="Nginx Load Balancer" >
                  <!--basic styling for the headings, better practice to do the same in a css file as the styling is same for all headers-->
                     <h3 style = "background: black; color: white">Introduction</h3>
                     <article>
