--- a/NginxLB/app2/index.html
+++ b/NginxLB/app2/index.html
@@ -1,5 +1,5 @@
 <html>
-    <title>App2</title>
+    <title>App 2</title>
 <!--This example uses the default bootstrap stylesheet-->
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -13,7 +13,7 @@
                 <ul class="nav nav-pills nav-stacked">
                  <!--internal linking to the respective sections-->
                     <a class="nav-link" href="#Introduction" rel="internal">
-                        <li>Introduction</li>
+                        <li>Nginx Load Balancer</li>
                     </a>
                     <a class="nav-link" href="#What_you_should_already_know" rel="internal">
                         <li>What you should already know</li>
@@ -32,9 +32,9 @@
         </div>
         <div class="col-md-10 col-sm-12 col-xs-12">
             <main id="main-doc">
-                <section class="main-section" id="Introduction" >
+                <section class="main-section" id="Nginx Load Balancer" >
                  <!--basic styling for the headings, better practice to do the same in a css file as the styling is same for all headers-->
-                    <h3 style = "background: black; color: white">Introduction</h3>
+                    <h3 style = "background: black; color: white">Nginx Load Balancer</h3>
                     <article>
                     <p>The word "Docker" refers to several things, including an open source community project; tools from the open source project; Docker Inc., 
                         the company that primarily supports that project; and the tools that company formally supports. The fact that the technologies and 
