--- a/nginx/index.html
+++ b/nginx/index.html
@@ -1,14 +1,13 @@
 <html>
  <head>
      <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-     <title>Default</title>
+     <title>Ruchan Yalçın</title>
  </head>
  <body>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
      <div style="text-align: center;"> 
-         <h1>Web Sitemize Hoşgeldiniz</h1>
-         <h2>Nginx, docker, DigitalOcean İşbirliği Sunar/h2>
-         <h3>Server - 1</h3>
+         <h1>Welcome to My Server</h1>
+         <h2>Nginx, Docker and Aws LightSail </h2>
      </div>
  </body>
  </html>
